Spacing: Unify margins across top-level groups and fix sizing issues in certain font areas

--- a/src/patterns/accordion.scss
+++ b/src/patterns/accordion.scss
@@ -204,8 +204,8 @@
 	}
 }
 
-.wp-block-shiro-accordion .accordion-item,
-.editor-styles-wrapper .wp-block-shiro-accordion .accordion-item {
+.wp-block-wmf-accordion .accordion-item,
+.editor-styles-wrapper .wp-block-wmf-accordion .accordion-item {
 
 	&[class*="vis-color"] {
 		border-left: 0;
