--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -10,10 +10,6 @@
 		margin-top: 3.875rem;
 	}
 
-	.wp-block-columns {
-		margin-bottom: 0;
-	}
-
 	@media (min-width: 1024px) {
 		// We stack our nav on top of Shiro's, in that theme.
 		[data-dropdown-status="initialized"] .primary-nav {
@@ -101,7 +97,7 @@
 	[id^="toc-"] {
 		scroll-margin-top: 0;
 		// Have to be able to predict where the pill is in relation to the div.
-		padding-top: 2rem !important;
+		padding-top: 3rem !important;
 		margin-top: 0 !important;
 	}
 
@@ -178,6 +174,27 @@
 
 	.vega-embed path {
 		transition: d 200ms;
+	}
+
+	// Overall visual rhythm.
+	.wp-block-group + figure {
+		margin-top: 3.5rem;
+	}
+	.wp-block-group:has(+ .wp-block-group.has-background) {
+		// padding-bottom: 2rem;
+	}
+	.wp-block-group.has-background {
+		padding-top: 3rem;
+		padding-bottom: 2rem;
+
+		@media screen and (min-width: 980px) {
+			padding-top: 3.5rem;
+			padding-bottom: 2.5rem;
+		}
+
+		&:not(:only-child) {
+			margin-bottom: 0;
+		}
 	}
 }
 
